# secure-ann-1

./: .gitignore  CMakeLists.txt
config/: config.json  config_marco.json  config_sift.json  config_sift100m.json  config_sift10m.json  config_sift20m.json  config_sift50m.json  config_trip.json
debugfiles/: hyperparameter.py  hyperparameter_search_results.json  oram_emulate.cpp
scripts/: setup.sh  setup_server.py
src/: CMakeLists.txt  client.cpp  defaults.h  server.cpp
src/diskann/: CMakeLists.txt  diskann_interface.h  oram_index.cpp  oram_index.h  range_search_disk_index.cpp  search_disk_index_sankha.cpp
src/diskann/apps/: search_disk_index.cpp  search_memory_index.cpp
src/diskann/apps/utils/: CMakeLists.txt  bin_to_tsv  fvecs_to_bvecs  int8_to_float  rand_data_gen  tsv_to_bin
src/diskann/include/: cached_io.h  percentile_stats.h  pq_flash_index.h  program_options_utils.hpp  utils.h
src/diskann/src/: disk_utils.cpp  distance.cpp  index.cpp  linux_aligned_file_reader.cpp  pq.cpp  pq_flash_index.cpp  pq_l2_distance.cpp  utils.cpp
src/diskann/utils/: bin_to_fvecs.cpp  compute_groundtruth.cpp  compute_groundtruth_for_filters.cpp  float_bin_to_int8  fvecs_to_bin  int8_to_float_scale  ivecs_to_bin  simulate_aggregate_recall  uint32_to_uint8  uint8_to_float
src/oram/: Block.cpp  Block.h  Bucket.cpp  Bucket.h  CMakeLists.txt  FileReader.cpp  OramAPI.cpp  OramAPI.h  OramBuilder.h  OramInterface.h  OramLeak.cpp  OramLeak.h  OramReadPathEviction.cpp  OramReadPathEviction.h  OramRing.cpp  OramRing.h  README.md  RandForOramInterface.h  RandomForOram.cpp  RandomForOram.h  RemoteLeak.cpp  RemoteLeak.h  RemotePath.cpp  RemotePath.h  RemoteRing.cpp  RemoteRing.h  RemoteServerRing.cpp  RemoteServerRing.h  RemoteServerStorage.cpp  RemoteServerStorage.h  cluster.cpp  cluster.h  config_parser.cpp  config_parser.h  csprng.cpp  graph.cpp  graph.h  io_utils.h  macro.h  node.cpp  (+4 more)
